[gd_scene load_steps=19 format=2]

[ext_resource path="res://Escenas/Menu.gd" type="Script" id=1]
[ext_resource path="res://images/background/bg_1.png" type="Texture" id=2]
[ext_resource path="res://fonts/Mathematical Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Mathematical.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Enagol-Math-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://songs/10 Point Zero.ogg" type="AudioStream" id=6]
[ext_resource path="res://sound fx/over_button.wav" type="AudioStream" id=7]
[ext_resource path="res://sound fx/click.ogg" type="AudioStream" id=8]
[ext_resource path="res://Escenas/Menu_opciones.tscn" type="PackedScene" id=9]
[ext_resource path="res://Escenas/Menu_info.tscn" type="PackedScene" id=10]
[ext_resource path="res://Escenas/Menu_Inicio_Modes.tscn" type="PackedScene" id=11]
[ext_resource path="res://Escenas/Menu_tablas_multiplicar.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]

size = 130
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Menu" type="Node"]

script = ExtResource( 1 )

[node name="Fondo" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="title" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 26.0
margin_right = 919.0
margin_bottom = 205.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Aprende Conmigo"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="sub_title" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 157.0
margin_right = 399.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Ed. Mates V 1.0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="Inicio" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 41.0
margin_top = 303.0
margin_right = 348.0
margin_bottom = 374.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Inicio"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Opciones" type="Button" parent="Inicio" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 309.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Opciones"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Info" type="Button" parent="Inicio" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 203.0
margin_right = 309.0
margin_bottom = 275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Info"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Salir" type="Button" parent="Inicio" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 913.0
margin_top = 328.0
margin_right = 1222.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Salir"
flat = false
align = 1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Menu_song" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="button_enter_sound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="button_click_sound" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Timer_Press_Sound" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Menu_opciones" parent="." index="8" instance=ExtResource( 9 )]

[node name="Menu_info" parent="." index="9" instance=ExtResource( 10 )]

[node name="Menu_Inicio_Modes" parent="." index="10" instance=ExtResource( 11 )]

[node name="Menu_tablas_multiplicar" parent="." index="11" instance=ExtResource( 12 )]

[connection signal="button_down" from="Inicio" to="." method="_on_Inicio_button_down"]

[connection signal="mouse_entered" from="Inicio" to="." method="_on_Inicio_mouse_entered"]

[connection signal="button_down" from="Inicio/Opciones" to="." method="_on_Opciones_button_down"]

[connection signal="mouse_entered" from="Inicio/Opciones" to="." method="_on_Opciones_mouse_entered"]

[connection signal="button_down" from="Inicio/Info" to="." method="_on_Info_button_down"]

[connection signal="mouse_entered" from="Inicio/Info" to="." method="_on_Info_mouse_entered"]

[connection signal="button_down" from="Inicio/Salir" to="." method="_on_Salir_button_down"]

[connection signal="mouse_entered" from="Inicio/Salir" to="." method="_on_Salir_mouse_entered"]

[connection signal="timeout" from="Timer_Press_Sound" to="." method="_on_Timer_Press_Sound_timeout"]

[connection signal="ocultar_opciones" from="Menu_opciones" to="." method="mostrar_menu"]

[connection signal="ocultar_info" from="Menu_info" to="." method="mostrar_menu"]

[connection signal="abrir_tablas" from="Menu_Inicio_Modes" to="." method="mostrar_menu_tablas"]

[connection signal="ocultar_inicio_modes" from="Menu_Inicio_Modes" to="." method="mostrar_menu"]

[connection signal="tablas_multiplicar_atras" from="Menu_tablas_multiplicar" to="." method="mostrar_menu_modes"]

[connection signal="tablas_multiplicar_inicio" from="Menu_tablas_multiplicar" to="." method="init_game_tablas"]


